{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 27,
  "lineage": "2658ae15-bfd9-d932-4233-110ba76d80e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:internet-gateway/igw-08f9bac02cb919d0c",
            "id": "igw-08f9bac02cb919d0c",
            "owner_id": "011659404441",
            "tags": {
              "Name": "tcw_igw"
            },
            "tags_all": {
              "Name": "tcw_igw"
            },
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "dependencies": [
            "aws_vpc.test_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08f9bac02cb919d0c",
            "id": "r-rtb-0916c9cbca0385dc91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0916c9cbca0385dc9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_vpc.test_VPC1",
            "aws_internet_gateway.myIGW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:route-table/rtb-01c17eba93b365dd6",
            "id": "rtb-01c17eba93b365dd6",
            "owner_id": "011659404441",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tcw_private_route_table_tag"
            },
            "tags_all": {
              "Name": "tcw_private_route_table_tag"
            },
            "timeouts": null,
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:route-table/rtb-0916c9cbca0385dc9",
            "id": "rtb-0916c9cbca0385dc9",
            "owner_id": "011659404441",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f9bac02cb919d0c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tcw_public_route_table"
            },
            "tags_all": {
              "Name": "tcw_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08896a89cdf8e8800",
            "route_table_id": "rtb-01c17eba93b365dd6",
            "subnet_id": "subnet-0d5066a24f0428fbb"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.pr_subnet1",
            "aws_vpc.test_VPC1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce33550e6a572eaa",
            "route_table_id": "rtb-01c17eba93b365dd6",
            "subnet_id": "subnet-0d07243c95c3cc0ae"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.pr_subnet2",
            "aws_vpc.test_VPC1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6d8c70bed580b7",
            "route_table_id": "rtb-0916c9cbca0385dc9",
            "subnet_id": "subnet-0b5c5244db44f01d5"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.p_subnet1",
            "aws_vpc.test_VPC1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b710cb6940c114b7",
            "route_table_id": "rtb-0916c9cbca0385dc9",
            "subnet_id": "subnet-07f8851982324faaf"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.p_subnet2",
            "aws_vpc.test_VPC1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_Sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:security-group/sg-03517de34a77730a3",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03517de34a77730a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tcw_SG",
            "name_prefix": "",
            "owner_id": "011659404441",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tcw_SG"
            },
            "tags_all": {
              "Name": "tcw_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "p_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:subnet/subnet-0b5c5244db44f01d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.172.1.0/24",
            "id": "subnet-0b5c5244db44f01d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011659404441",
            "tags": {
              "Name": "Public-SN1"
            },
            "tags_all": {
              "Name": "Public-SN1"
            },
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "dependencies": [
            "aws_vpc.test_VPC1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "p_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:subnet/subnet-07f8851982324faaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.172.2.0/24",
            "id": "subnet-07f8851982324faaf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011659404441",
            "tags": {
              "Name": "Public-SN2"
            },
            "tags_all": {
              "Name": "Public-SN2"
            },
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "dependencies": [
            "aws_vpc.test_VPC1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:subnet/subnet-0d5066a24f0428fbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.172.5.0/24",
            "id": "subnet-0d5066a24f0428fbb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011659404441",
            "tags": {
              "Name": "Private-SN1"
            },
            "tags_all": {
              "Name": "Private-SN1"
            },
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "dependencies": [
            "aws_vpc.test_VPC1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:subnet/subnet-0d07243c95c3cc0ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.172.6.0/24",
            "id": "subnet-0d07243c95c3cc0ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011659404441",
            "tags": {
              "Name": "Private-SN2"
            },
            "tags_all": {
              "Name": "Private-SN2"
            },
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "dependencies": [
            "aws_vpc.test_VPC1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:vpc/vpc-035624863a2ecf3c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.172.0.0/16",
            "default_network_acl_id": "acl-07fa59bbaff5d9d24",
            "default_route_table_id": "rtb-09b99141c266d7f1e",
            "default_security_group_id": "sg-0370c3d22eebcbe43",
            "dhcp_options_id": "dopt-3bbcbc41",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-035624863a2ecf3c0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b99141c266d7f1e",
            "owner_id": "011659404441",
            "tags": {
              "Name": "tcw_VPC"
            },
            "tags_all": {
              "Name": "tcw_VPC"
            }
          }
        }
      ]
    }
  ]
}